--- a/locations/templates/map.html
+++ b/locations/templates/map.html
@@ -2,45 +2,129 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript" src="http://127.0.0.1:8000/static/js/gmaps.js"></script>
-</head>
+  </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDG1X8_qNr7CucB_y5lgjg-SOo_nfykg3E&callback=initMap"></script>
+<script type="text/javascript">
 
- <script type="text/javascript">
-    var map;
-    $(document).ready(function(){
-      map = new GMaps({
-        el: '#map',
-        lat: -7.220517,
-        lng: -35.918941,
-        click: function(e){
-          console.log(e);
+
+      function initMap() {
+        var map = new google.maps.Map(document.getElementById('map-canvas'), {
+          zoom: 16,
+          center: {lat: -7.21842655, lng: -35.91299694}
+        });
+
+        setMarkers(map);
+      }
+
+
+function setMarkers(map) {
+
+
+var myDynUrl = "/locations_data"
+$.ajax({
+  url: myDynUrl,
+  dataType: 'json',
+  success: function (data) {
+
+  		var tm = data.length;
+
+        var image = {
+          url: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
+          size: new google.maps.Size(20, 32),
+          origin: new google.maps.Point(0, 0),
+          anchor: new google.maps.Point(0, 32)
+        };
+
+        var shape = {
+          coords: [1, 1, 1, 20, 18, 20, 18, 1],
+          type: 'poly'
+        };
+
+        var markers = [];
+        for (var i = 0; i < tm; i++) {
+        var beach = data[i].fields;
+        var newLat = data[i].fields.lat;
+        var newLng = data[i].fields.lng;
+            var marker = new google.maps.Marker({
+            position: {lat: beach.lat, lng: beach.lng},
+            map: map,
+            icon: image,
+            shape: shape,
+          });
+         markers.push(marker);
+         setMarkers2(map, markers);
         }
+}
       });
+   }
 
-      path = [
-      {% for point in points %}
-        [{{ point.lat }}, {{ point.lng }}],
-        {% endfor %}];
 
-      map.drawPolyline({
-        path: path,
-        strokeColor: '#FF0000',
-        strokeOpacity: 0.6,
-        strokeWeight: 6
+
+function setMarkers2(map, markers) {
+	setInterval(() => {
+
+
+var myDynUrl = "/locations_data"
+$.ajax({
+  url: myDynUrl,
+  dataType: 'json',
+  success: function (data) {
+
+  		var tm = data.length;
+
+        // Adds markers to the map.
+
+        // Marker sizes are expressed as a Size of X,Y where the origin of the image
+        // (0,0) is located in the top left of the image.
+
+        // Origins, anchor positions and coordinates of the marker increase in the X
+        // direction to the right and in the Y direction down.
+        var image = {
+          url: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
+          // This marker is 20 pixels wide by 32 pixels high.
+          size: new google.maps.Size(20, 32),
+          // The origin for this image is (0, 0).
+          origin: new google.maps.Point(0, 0),
+          // The anchor for this image is the base of the flagpole at (0, 32).
+          anchor: new google.maps.Point(0, 32)
+        };
+        // Shapes define the clickable region of the icon. The type defines an HTML
+        // <area> element 'poly' which traces out a polygon as a series of X,Y points.
+        // The final coordinate closes the poly by connecting to the first coordinate.
+        var shape = {
+          coords: [1, 1, 1, 20, 18, 20, 18, 1],
+          type: 'poly'
+        };
+
+        for (var i = 0; i < tm; i++) {
+        var beach = data[i].fields;
+        var newLat = data[i].fields.lat;
+        var newLng = data[i].fields.lng;
+        console.log(markers);
+        markers[i].setPosition(new google.maps.LatLng(newLat,newLng));
+
+        }
+
+
+}
       });
-    });
-  </script>
-
+  }, 1000);     }
+ </script>
 <style type="text/css">
-    	html, body {
+
+   #map-canvas {
+   height: 80%;
+   width: 80%;
+   background: #6699cc;
+}
+html, body {
     		height: 100%;
     		margin: 0;
     	}
 
     	#map {
-    		min-height: 100%; 
+    		min-height: 100%;
     	}
     </style>
     <!--[if lte IE 6]>
@@ -50,13 +134,35 @@
     	}
     </style>
     <![endif]-->
-    
-<body>
-    <div id="map"></div>
- 
 
-  {% for point in points %}
-        [{{ point.lat }}, {{ point.lng }}],
-        {% endfor %}
+<body onload="initMap()">
+<div id="map-canvas"></div>
+  <!--{% for point in points %}-->
+  <!--      [{{ point.lat }}, {{ point.lng }}],-->
+  <!--      {% endfor %}-->
+
+<button onclick="initMap()">Click me</button>
 </body>
 </html>
+
+Dispositivos com ID 12:
+<br>
+{{ device_id }}
+<br>
+<br>
+Dispositivos ON:
+<br>
+{{ log }}
+<br>
+<br>
+Ultimo dispositivo:
+<br>
+{{ ultimo }}
+<br>
+{{ ultimo.lat }}
+
+<br>
+
+{% for point in log %}
+    [{{ point.lat }}, {{ point.lng }}]
+{% endfor %}
